# openempi

./: OpenEMPI.yaml  README.md
open-empi-client/: README.md  pyproject.toml
open-empi-client/open_empi_client/: __init__.py
open-empi-client/open_empi_client/api/audit_events_resource/: get_version_id_audit_events.py  get_version_id_audit_events_types.py
open-empi-client/open_empi_client/api/blocking_configuration_resource/: get_version_id_blocking_configuration.py  put_version_id_blocking_configuration.py  (+1 more)
open-empi-client/open_empi_client/models/: __init__.py  address.py  address_type.py  audit_event_entry.py  audit_event_type.py  authentication_request.py  blocking_configuration.py  blocking_round.py  comparator_function.py  comparator_function_parameter_map.py  custom_field.py  custom_field_configuration_parameters.py  data_profile.py  data_profile_attribute.py  data_profile_attribute_value.py  deterministic_matching_configuration.py  entity.py  entity_attribute.py  entity_attribute_datatype.py  entity_attribute_group.py  entity_attribute_group_attribute.py  ethnic_group.py  field_value.py  file.py  gender.py  get_version_id_deterministic_matching_configuration_response_200_item.py  get_version_id_record_links_record_record_id_direct.py  get_version_id_record_links_state.py  identifier.py  identifier_domain.py  identifier_domain_attribute.py  identifier_domain_attribute_request.py  identifier_update_entry.py  identifier_update_event.py  job_entry.py  job_entry_event_log.py  job_status.py  job_type.py  json_array.py  language.py  (+34 more)
(+65 files in other folders)
